@@ -1,3 +1,6 @@
+Apr 15, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- add q3a Excessive Plus gametypes (patch by Jason Santos)
+
 Apr 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - add finish translation by Sami Laitinen
 
